--- a/style.css
+++ b/style.css
@@ -1,54 +1,56 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     font-family: sans-serif;
 }
 
-header{
+header {
     background-color: #000000;
 }
 
-.nav-bar{
+.nav-bar {
     width: 100%;
     height: 60px;
-    display: flex; 
-    justify-content: space-between; 
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    position: fixed; 
-    z-index: 99; 
-    box-shadow: 0 0 10px #000; 
+    position: fixed;
+    z-index: 99;
+    box-shadow: 0 0 10px #000;
     background-color: rgba(0, 0, 0, 0.79);
     font-size: 14px;
 }
 
-.logo{ 
+.logo {
     color: #f4f0f0;
-    font-size: 15px;   
+    font-size: 15px;
     margin-left: 58px;
     margin-right: 58px;
     display: flex;
 }
 
-.search-box{
+
+
+.search-box {
     flex: 1;
     position: relative;
 }
 
-.search-box input{
+.search-box input {
     height: 40px;
     border: none;
-    outline: none; 
+    outline: none;
     background: #f2f2f2;
-    border-radius: 30px; 
-    color: gray; 
+    border-radius: 30px;
+    color: gray;
     font-size: 14px;
     text-align: left;
     padding-left: 10px;
     padding-right: 130px;
 }
 
-.search-box button{
+.search-box button {
     cursor: pointer;
     width: 40px;
     height: 40px;
@@ -61,19 +63,19 @@ header{
     background: #22c3cf;
 }
 
-.home ul{
+.home ul {
     flex: 2;
     display: flex;
     justify-content: space-evenly;
     margin-left: 30px;
 }
 
-.home ul li{
+.home ul li {
     list-style: none;
     display: inline-block;
 }
 
-.home ul li a{
+.home ul li a {
     text-decoration: none;
     color: #ffffff;
     text-transform: uppercase;
@@ -81,28 +83,100 @@ header{
     padding: 10px 15px;
 }
 
-.home ul li a:hover{
-    border-bottom: 2px solid #22c3cf; 
+.home ul li a:hover {
+    border-bottom: 2px solid #22c3cf;
 }
 
-.social{
+.social {
     flex: 2;
     display: flex;
     justify-content: space-evenly;
 }
 
-.social ul li{
+.social ul li {
     list-style: none;
     margin-right: 15px;
 }
 
-.social ul li a{
+.social ul li a {
     text-decoration: none;
     color: #22c3cf;
     padding: 10px 15px;
 }
 
-.social ul li a:hover{
-    border-bottom: 2px solid #22c3cf; 
+.social ul li a:hover {
+    border-bottom: 2px solid #22c3cf;
 }
 
+.menu-toggle {
+    display: none;
+}
+
+.nav-menu {
+    display: none;
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    text-align: center;
+    padding: 10px 0;
+    z-index: 98;
+}
+
+.nav-menu ul {
+    list-style: none;
+}
+
+.nav-menu ul li {
+    margin-bottom: 10px;
+}
+
+.nav-menu ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .logo {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .home ul {
+        display: none;
+    }
+
+    .social ul {
+        display: none;
+    }
+
+    .menu-toggle {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 70px;
+        cursor: pointer;
+        position: relative;
+        z-index: 100;
+        transition: right 0.5s linear;
+    }
+
+    .menu-toggle .bar {
+        width: 100%;
+        height: 4px;
+        background-color: #22c3cf;
+        margin-bottom: 4px;
+    }
+
+    .nav-menu {
+        display: none;
+    }
+
+    .nav-menu.open {
+        display: block;
+    }
+}
